cabal-version: 3.0

name: euphoria
version: 0.8.0.0
synopsis: Dynamic network FRP with events and continuous values
description:

  Euphoria is FRP with practicality.

  FRP is a good way to model computations which need run for an extended
  period of time, react to incoming events, and continually produce
  output. Simulations, games, and GUIs are all good candidates for FRP.

  In Euphoria, networks (dataflow graphs) are dynamic. Networks are
  first-class values which can be passed around inside of other
  networks, and they can be connected together at any time. This
  flexibility allows complicated, real-world problems to be modeled with
  FRP.

  Though Euphoria is flexible and high-level, it makes some concessions
  for performance and the underlying implementation.

  Euphoria works in discrete steps. You will construct the body of your
  program as an FRP network. To get results, you must perform an IO
  action to step the network. After stepping, your network will have
  produced some result, such as a string, which you can print to the
  screen. A network can also produce IO actions as an output. Step the
  network as many times as necessary to continue running your program.

  A simulation, game, or GUI will probably loop while stepping until the
  user terminates the program.

  Euphoria is mostly concerned with three types: Signal, Event, and
  Discrete.

  Signal represents a continuous value that changes with each
  step of the network. Discrete is like Signal, but it is possible to
  determine if its value has not changed, and avoid unnecessary
  computation. As long as a Signal or Discrete exists, it will contain a
  value. Event represents something that exists for only one moment in
  time, such as a packet received over a socket, or a mouse click.

  Signals and Discretes are instances of Monad and Applicative. Events
  are instances of Monoid.

  SignalGen is the outer monad, where networks are constructed.
  SignalGen is an instance of Monad and Applicative. SignalGens inside
  of Signals, Discretes, or Events can be used to attach new networks to
  the existing network on the fly.

  Signals, Discretes and Events may contain other Signals, Discretes or
  Events. Euphoria encourages the use of dynamic network construction
  using these higher-order FRP types, and they can be attached or
  detached from the network with ease. Euphoria relies on garbage
  collection and weak pointers to prune the network when parts of it are
  no longer needed.

  Euphoria is built on top of the Elerea library by Patai Gergely.

author: Takano Akio, Andrew Richards, Liyang HU
maintainer: Takano Akio <aljee@hyper.cx>
homepage: https://github.com/tsurucapital/euphoria
bug-reports: https://github.com/tsurucapital/euphoria/issues
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
category: FRP
tested-with: GHC == { 8.10, 8.8 }

common common
  build-depends:
    base ^>= { 4.12, 4.13, 4.14 },
    containers ^>= { 0.5.5, 0.6 },
    deepseq ^>= { 1.2, 1.3, 1.4 },
    elerea ^>= 2.9,
    enummapset-th ^>= 0.6.0.0,
    hashable ^>= { 1.2, 1.3 },
    these ^>= 1.1,
    transformers ^>= { 0.4.1, 0.5 },
    unordered-containers ^>= 0.2.0.0
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: common
  exposed-modules:
    FRP.Euphoria.Event,
    FRP.Euphoria.Signal,
    FRP.Euphoria.Update,
    FRP.Euphoria.Collection,
    FRP.Euphoria.EnumCollection.Lazy,
    FRP.Euphoria.EnumCollection.Strict,
    FRP.Euphoria.HashCollection.Lazy,
    FRP.Euphoria.HashCollection.Strict,
    FRP.Euphoria.Abbrev,
    FRP.Euphoria.Internal.GenericCollection,
    FRP.Euphoria.Internal.Maplike

test-suite tests
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  other-modules:
    FRP.Euphoria.EnumCollection.Lazy.Test,
    FRP.Euphoria.Event.Test,
    FRP.Euphoria.HashCollection.Strict.Test,
    FRP.Euphoria.Update.Test
  build-depends:
    euphoria,
    HUnit,
    test-framework,
    test-framework-hunit,
    test-framework-th

benchmark bench
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmarks
  other-modules:
    FRP.Euphoria.EnumCollection.Lazy.Bench,
    FRP.Euphoria.EnumCollection.Strict.Bench,
    FRP.Euphoria.HashCollection.Lazy.Bench,
    FRP.Euphoria.HashCollection.Strict.Bench
  ghc-options: -Wall
  build-depends:
    euphoria,
    criterion
